--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- boostrap tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon.png" />
@@ -28,12 +32,14 @@
     <link rel="alternate" type="application/rss+xml"
       title="<%= @rss_link[:title] %>" href="<%= @rss_link[:href] %>" />
   <% end %>
+
+
 </head>
 
 <!-- Start editing page -->
 
 <body>
-  <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-default">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         <span class="icon-bar"></span>
@@ -74,58 +80,62 @@
           </ul>
         <% end %>
 <!-- navbar right stuff -->
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="/filters" <%= @cur_url == "/filters" ?
-            raw("class=\"cur_url\"") : "" %>>Filters</a>
-          </li>
-          <li>
-          <% if @user %>
-          <% if (count = @user.unread_message_count) > 0 %>
-            <a href="/messages" class="new_messages <%= @cur_url == "/messages" ?
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="/filters" <%= @cur_url == "/filters" ?
+              raw("class=\"cur_url\"") : "" %>>Filters</a>
+            </li>
+            <li>
+              <% if @user %>
+              <% if (count = @user.unread_message_count) > 0 %>
+              <a href="/messages" class="new_messages <%= @cur_url == "/messages" ?
               "cur_url" : "" %>"><%= count %> New Message<%= count == 1 ? "" :
               "s" %></a>     
-          <% else %>
-            <a href="/messages" <%= @cur_url == "/messages" ?
+              <% else %>
+              <a href="/messages" <%= @cur_url == "/messages" ?
               raw("class=\"cur_url\"") : "" %>>Messages</a>
-          <% end %>
-          </li>
-          <li>
-            <a href="/settings" <%= @cur_url == "/settings" ?
-            raw("class=\"cur_url\"") : "" %>><%= @user.username %>
-            (<%= @user.karma %>)</a>
-          </li>
-          <li>
-          <%= link_to "Logout", { :controller => "login", :action => "logout" },
-            :data => { :confirm => "Are you sure you want to logout?" },
-            :method => "post" %>
-          <% else %>
-          <a href="/login">Login</a>
-          <% end %>
-          </li>
-        </ul>  
+              <% end %>
+            </li>
+            <li>
+              <a href="/settings" <%= @cur_url == "/settings" ?
+              raw("class=\"cur_url\"") : "" %>><%= @user.username %>
+              (<%= @user.karma %>)</a>
+            </li>
+            <li>
+              <%= link_to "Logout", { :controller => "login", :action => "logout" },
+              :data => { :confirm => "Are you sure you want to logout?" },
+              :method => "post" %>
+              <% else %>
+              <a href="/login">Login</a>
+              <% end %>
+            </li>
+          </ul>  
     </div>
   </div>
-
+<!--
     <div id="inside">
       <% if flash[:error] %>
         <div class="flash-error"><%= flash[:error] %></div>
       <% elsif flash[:success] %>
         <div class="flash-success"><%= flash[:success] %></div>
       <% end %>
+-->
 
-      <%= yield %>
+    <%= yield %>
 
-      <div id="footer">
-        <a href="/moderations">Moderation Log</a>
+<div id="footer"
+    <div class="container">
+      <span class="pull-right" style="text-align: right">
+      <a href="/moderations">Moderation Log</a>
         <% if @user && !@user.is_new? &&
         (iqc = InvitationRequest.verified_count) > 0 %>
           <a href="/invitations">Invitation Queue (<%= iqc %>)</a>
         <% end %>
         <a href="/privacy">Privacy</a>
         <a href="/about">About</a>
+      </span>
       </div>
     </div>
-  </div>
+
 </body>
 </html>
