--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -5,15 +5,19 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
 
 
 <div class="container">
-  <div class="voters">
-    <% if @user %>
-      <a class="upvoter"></a>
-    <% else %>
-      <%= link_to "", login_url, :class => "upvoter" %>
-    <% end %>
-    <div class="score"><%= story.score %></div>
-  </div>
-  <div class="details">
+    <div class="col-md-1">
+      <% if @user %>
+        <a class="upvoter"></a>
+      <% else %>
+        <%= link_to "", login_url, :class => "upvoter" %>
+      <% end %>
+    
+      <div class="score"><%= story.score %></div>
+  
+    </div>
+  
+
+  <div class="col-md-11">
     <span class="link">
       <% if story.can_be_seen_by_user?(@user) %>
         <a href="<%= story.url_or_comments_url %>"><%= story.title %></a>
@@ -53,6 +57,9 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
         <% end %>
       <% end %>
     <% end %>
+    
+
+
     <div class="byline">
       <% if story.previewing %>
         by <a><%= story.user.username %></a>
@@ -117,6 +124,9 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
     </div>
   </div>
 </div>
+
+
+
 <div class="mobile_comments <%= story.comments_count == 0 ? "zero" : "" %>"
 style="display: none;">
   <a href="<%= story.comments_url %>"><%= story.comments_count %></a>
