--- a/app/assets/stylesheets/paper.css
+++ b/app/assets/stylesheets/paper.css
@@ -267,8 +267,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('/assets/glyphicons-halflings-regular.eot');
+  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -1387,10 +1387,13 @@ pre code {
 }
 .container {
   margin-right: auto;
-  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  border: 3px solid #cccccc;
 }
+
+}
+.container
 @media (min-width: 768px) {
   .container {
     width: 750px;
