--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,3 +1,6 @@
+<!-- this code is the view for creating stories- the stories/new view-->
+
+
 <% if f.object.errors.count == 1 && f.object.already_posted_story %>
   <div class="flash-error">
   <h2>Error: This story was already submitted <%=
