--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@
           </ul>  
     </div>
   </div>
-<!--
+<!-- commented out, didn't know what it does
     <div id="inside">
       <% if flash[:error] %>
         <div class="flash-error"><%= flash[:error] %></div>
