--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -274,7 +274,7 @@ $(document).ready(function() {
     Lobsters.flagStory(this);
     return false;
   });
-  $("li.story a.upvoter").click(function() {
+  $('#upvoter').click(function() {
     Lobsters.upvoteStory(this);
     return false;
   });
