--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,12 +62,6 @@
         
         <% links.merge!({ "/search" => "Search" }) %>
         
-        <% if @cur_url.present? && !links.keys.include?(@cur_url) &&
-        @heading.present? %>
-          <span id="headertitle">
-            <a href="<%= @cur_url %>"><%= @heading %></a>
-          </span>
-        <% end %>
 
 <!-- This is where I am putting the navbar html/css... responsive etc all that good stuff -->
     <div class="navbar-collapse collapse navbar-responsive-collapse">
@@ -112,6 +106,15 @@
           </ul>  
     </div>
   </div>
+          
+          <% if @cur_url.present? && !links.keys.include?(@cur_url) &&
+        @heading.present? %>
+          
+          <div class=container>
+            <a href="<%= @cur_url %>">Showing results for tag = <%= @heading %></a>
+          </div>
+
+        <% end %>
 <!-- commented out, didn't know what it does
     <div id="inside">
       <% if flash[:error] %>
