--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -1,58 +1,75 @@
 
 
-<!-- Taking out previous logic for upvote/downvote used to display this view and replacing it with the below li
-<li id=
-"story_<%= story.short_id %>" data-shortid="<%= story.short_id %>"
+<!-- HTML LI tag, w/ css "story... tag"-->
+<li id="story_<%= story.short_id %>" 
+data-shortid="<%= story.short_id %>"
 class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
 "downvoted" : "" %> <%= story.vote == 0 ? "hidden" : "" %> <%= story.is_expired? ?
 "expired" : "" %>">
--->
 
-<li>
+<div class="container-fluid">
 
-<div class="container">
-
-  <div class=col-lg-1>
+  <div class="row">
+    <div class="col-sm-1">
+    
     <% if @user %>
-        <span class="glyphicon glyphicon-arrow-up"></span>
-        <a class="upvoter"></a>
+      <a class="btn btn-primary btn-xs btn-block" id="upvoter">Good</a>
+      <a class="btn btn-primary btn-xs btn-block" id="upvoter">Bad</a>
     <% else %>
-      <%= link_to "", login_url, :class => "upvoter" %>
+      <%= link_to "Upvote", login_url, :class => "btn btn-primary btn-xs btn-block"%>
+      <%= link_to "Downvote", login_url, :class => "btn btn-primary btn-xs btn-block"%>
     <% end %>
-    <div class="score"><%= story.score %></div>
-  </div>
+
+
+      <p class="text-center"><%= story.score %></p> 
+    
+    </div>  
   
-  <div class=col-lg-11>
-  
-    <span class="link">
+<row>
+  <div class="col-sm-11">
+    <!--- Title link-->
+    <% if story.can_be_seen_by_user?(@user) %>
+    <strong><a href="<%= story.url_or_comments_url %>"><%= story.title %></a></strong>
+    <% end %>
+
+    <% if story.is_gone? %>
+        [Story removed by <%= story.is_moderated? ? "moderator" :
+          "original submitter" %>] 
+      <% end %>
+<!--
+    <button type="button" class="btn btn-link btn-md">
       <% if story.can_be_seen_by_user?(@user) %>
         <a href="<%= story.url_or_comments_url %>"><%= story.title %></a>
       <% end %>
+
       <% if story.is_gone? %>
         [Story removed by <%= story.is_moderated? ? "moderator" :
-          "original submitter" %>]
+          "original submitter" %>] 
       <% end %>
-    </span>
-  
+    </button>
+-->
+    <!-- tags --> 
     <% if story.can_be_seen_by_user?(@user) %>
-      <span class="tags">
         <% story.taggings.sort_by{|t| t.tag.tag }.sort_by{|t|
         t.tag.is_media?? -1 : 0 }.each do |tagging| %>
+  
           <a href="<%= tag_url(tagging.tag.tag) %>"
-            class="<%= tagging.tag.css_class %>"
+            class="btn btn-primary btn-xs"
             title="<%= tagging.tag.description %>"><%= tagging.tag.tag %></a>
         <% end %>
-      </span>
-  
-      <span class="domain"><%= story.domain %></span>
 
+    <small> <%= story.domain %> </small>
+    
       <% if defined?(single_story) && single_story %>
         <% story.merged_stories.each do |ms| %>
           <br>
+
           <span class="merge"></span>
+
           <span class="link">
             <a href="<%= ms.url_or_comments_url %>"><%= ms.title %></a>
           </span>
+          
           <span class="tags">
             <% ms.taggings.sort_by{|t| t.tag.tag }.sort_by{|t|
             t.tag.tag == "pdf" ? -1 : 0 }.each do |tagging| %>
@@ -61,19 +78,26 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
                 title="<%= tagging.tag.description %>"><%= tagging.tag.tag %></a>
             <% end %>
           </span>
+
           <span class="domain"><%= ms.domain %></span>
+
         <% end %>
       <% end %>
     <% end %>
-  
-    <div class="byline">
+  </div>
+
+    <div class="col-sm-11">
       <% if story.previewing %>
         by <a><%= story.user.username %></a>
         just now
       <% else %>
-        by <a href="/u/<%= story.user.username %>"><%= story.user.username
-          %></a> <%= raw(time_ago_in_words_label(story.created_at).
-          gsub(/^about /, "")) %> ago
+        by <a href="/u/<%= story.user.username %>"
+        <% if story.user.is_new? %>
+          class="new_user"
+        <% end %>><%= story.user.username %></a>
+
+        <%= raw(time_ago_in_words_label(story.created_at).gsub(/^about /, ""))
+          %> ago
 
         <% if story.is_editable_by_user?(@user) %>
           |
@@ -128,14 +152,10 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
         <% end %>
       <% end %>
     </div>
-  </div>
-</div>
+  </row>
 
-<!---
 <div class="mobile_comments <%= story.comments_count == 0 ? "zero" : "" %>"
 style="display: none;">
   <a href="<%= story.comments_url %>"><%= story.comments_count %></a>
 </div>
--->
 </li>
-
