--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -1,26 +1,24 @@
 <li id="story_<%= story.short_id %>" data-shortid="<%= story.short_id %>"
-class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
+class=" table-striped story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
 "downvoted" : "" %> <%= story.vote == 0 ? "hidden" : "" %> <%= story.is_expired? ?
-"expired" : "" %>">
+"expired" : "" %>   ">
 
-
-<div class="story_liner container-fluid">
-    <div class="voters col-md-1">
+<div class="container"
+  <div class="row">
+    <div class="voters col-xs-1">
       <% if @user %>
-        <a class="upvoter btn btn-default btn-block uvote">Mine</a>
+        <a class="upvoter btn uvote"></a>
         <div class="score text-center"><%= story.score %></div>
-        <a class="downvoter btn btn-default btn-block dvote">Yours</a>
+        <a class="downvoter btn dvote"></a>
       <% else %>
-        <%= link_to "Mine", login_url, :class => "upvoter btn btn-default" %>
+        <%= link_to "", login_url, :class => "upvoter btn uvote" %>
         <div class="score text-center"><%= story.score %></div>
-        <%= link_to "Yours", login_url, :class => "downvoter btn btn-default" %>
+        <%= link_to "", login_url, :class => "downvoter btn dvote" %>
       <% end %>
-  
     </div>
   
-
-  <div class="col-md-11">
-    <span class="link">
+  <div class="col-xs-9 trade">
+    <span class="link h5">
       <% if story.can_be_seen_by_user?(@user) %>
         <a href="<%= story.url_or_comments_url %>"><%= story.title %></a>
       <% end %>
@@ -29,8 +27,9 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
           "original submitter" %>]
       <% end %>
     </span>
+
     <% if story.can_be_seen_by_user?(@user) %>
-      <span class="tags">
+      <span class="tags btn tagbutton">
         <% story.taggings.sort_by{|t| t.tag.tag }.sort_by{|t|
         t.tag.is_media?? -1 : 0 }.each do |tagging| %>
           <a href="<%= tag_url(tagging.tag.tag) %>"
@@ -38,7 +37,7 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
             title="<%= tagging.tag.description %>"><%= tagging.tag.tag %></a>
         <% end %>
       </span>
-      <span class="domain"><%= story.domain %></span>
+      <span class="domain pdf"><%= story.domain %></span>
 
       <% if defined?(single_story) && single_story %>
         <% story.merged_stories.each do |ms| %>
@@ -125,12 +124,13 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
       <% end %>
     </div>
   </div>
+</row>
 </div>
 
-
-
+<!--
 <div class="mobile_comments <%= story.comments_count == 0 ? "zero" : "" %>"
 style="display: none;">
   <a href="<%= story.comments_url %>"><%= story.comments_count %></a>
 </div>
+-->
 </li>
