--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,18 +1,20 @@
-<div class="box wide">
-  <div class="legend">
-    Login
-  </div>
+<div class="container">
+    <h4>Login</h4>
 
   <%= form_tag login_url do %>
-  <p>
-    <%= label_tag :email, "E-mail or Username:" %>
-    <%= text_field_tag :email, "", :size => 30, :autofocus => "autofocus" %>
-    <br />
 
-    <%= label_tag :password, "Password:" %>
-    <%= password_field_tag :password, "", :size => 30 %>
-    <br />
-    </p>
+  <form role="form">
+    <div class="form-group">
+      <label for="inputEmail" class="col-xs-1 control-label" <%= label_tag :email, "E-mail or Username:" %> </label>
+      <input type="text" class="form-control" id=<%= text_field_tag :email%>
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputPassword1" class="col-xs-1 control-label" <%= label_tag :password, "Password:" %> </label>
+      <input type="password" class="form-control" id=<%= password_field_tag :password%>
+    </div>
+  </div>
+
 
     <p>
     <%= submit_tag "Login" %>
