--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,143 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- boostrap tags -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-144.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="robots" content="noarchive,noodp,noydir" />
-  <meta name="referrer" content="always" />
-  <% if @short_url %>
-    <link rev="canonical" rel="self alternate shorter shorturl shortlink"
-      href="<%= @short_url %>" />
-  <% end %>
-  <title><%= @title.present? ? "#{@title} | " : "" %><%=
-    Rails.application.name %></title>
-  <%= stylesheet_link_tag "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <% if @user %>
-    <script>
-      Lobsters.curUser = '<%= @user.id %>';
-    </script>
-  <% end %>
-  <%= csrf_meta_tags %>
-  <% if @rss_link %>
-    <link rel="alternate" type="application/rss+xml"
-      title="<%= @rss_link[:title] %>" href="<%= @rss_link[:href] %>" />
-  <% end %>
-
+<%= render 'layouts/header' %>
 
 </head>
-
-<!-- Start editing page -->
-
 <body>
-  <div class="navbar navbar-default">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/"><%= Rails.application.name %></a>
-    </div>
-<!-- below is ruby code to tell us when / when not to render nav links -->
 
-        <% links = {
-          "/recent" => "Recent",
-          "/comments" => "Comments"
-        } %>
-        
-        <% if @user %>
-          <% links.merge!({ "/threads" => "Your Threads",
-            "/stories/new" => "Submit Story" }) %>
-        <% end %>
-        
-        <% links.merge!({ "/search" => "Search" }) %>
-        
-        <% if @cur_url.present? && !links.keys.include?(@cur_url) &&
-        @heading.present? %>
-          <span id="headertitle">
-            <a href="<%= @cur_url %>"><%= @heading %></a>
-          </span>
-        <% end %>
-
-<!-- This is where I am putting the navbar html/css... responsive etc all that good stuff -->
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <% links.each do |u,v| %>
-          <ul class="nav navbar-nav">
-            <li>
-            <a href="<%= u %>" <%= u == @cur_url ? raw("class=\"cur_url\"") :
-            "" %>><%= v %></a>
-            </li>
-          </ul>
-        <% end %>
-<!-- navbar right stuff -->
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="/filters" <%= @cur_url == "/filters" ?
-              raw("class=\"cur_url\"") : "" %>>Filters</a>
-            </li>
-            <li>
-              <% if @user %>
-              <% if (count = @user.unread_message_count) > 0 %>
-              <a href="/messages" class="new_messages <%= @cur_url == "/messages" ?
-              "cur_url" : "" %>"><%= count %> New Message<%= count == 1 ? "" :
-              "s" %></a>     
-              <% else %>
-              <a href="/messages" <%= @cur_url == "/messages" ?
-              raw("class=\"cur_url\"") : "" %>>Messages</a>
-              <% end %>
-            </li>
-            <li>
-              <a href="/settings" <%= @cur_url == "/settings" ?
-              raw("class=\"cur_url\"") : "" %>><%= @user.username %>
-              (<%= @user.karma %>)</a>
-            </li>
-            <li>
-              <%= link_to "Logout", { :controller => "login", :action => "logout" },
-              :data => { :confirm => "Are you sure you want to logout?" },
-              :method => "post" %>
-              <% else %>
-              <a href="/login">Login</a>
-              <% end %>
-            </li>
-          </ul>  
-    </div>
-  </div>
-<!--
-    <div id="inside">
-      <% if flash[:error] %>
-        <div class="flash-error"><%= flash[:error] %></div>
-      <% elsif flash[:success] %>
-        <div class="flash-success"><%= flash[:success] %></div>
-      <% end %>
--->
+<%= render 'layouts/navbar' %>
 
     <%= yield %>
 
-<div class="container-fluid"
-    <ul class="nav navbar-nav">
-      <span class="pull-right" style="text-align: right">
-      <a href="/moderations">Moderation</a>
-        |
-        <% if @user && !@user.is_new? &&
-        (iqc = InvitationRequest.verified_count) > 0 %>
-        <a href="/invitations">Invitation Queue (<%= iqc %>)</a>
-        <% end %>
-        <a href="/privacy">Privacy</a>
-        |
-        <a href="/about">About</a>
-        |     
-      </span>
-      </ul>
-    </div>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
