--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -108,6 +108,8 @@ class=" table-striped story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vo
           <% end %>
         <% end %>
         <% if !story.is_gone? && (@user || story.comments_count > 0) %>
+        
+          <!--- feeds to story line 190-->
           <span class="comments_label">
             |
             <a href="<%= story.comments_url %>"><%= story.comments_count == 0 ?
@@ -133,4 +135,5 @@ style="display: none;">
   <a href="<%= story.comments_url %>"><%= story.comments_count %></a>
 </div>
 -->
+<hr />
 </li>
