added logo, messed up stories/new

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><%= Rails.application.name %></a>
+      <a class="navbar-brand" href="/"><img src= "/assets/ut_logo.png"> </a>
     </div>
 <!-- below is ruby code to tell us when / when not to render nav links -->
 
