--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -24,42 +24,56 @@
   <%= f.hidden_field :seen_previous %>
 <% end %>
 
-<div class="box">
-  <div class="boxline">
+<%= bootstrap_form_for(@story) do |f| %> 
+
   <% if f.object.url_is_editable_by_user?(@user) %>
-    <%= f.label :url, "URL:", :class => "required" %>
-    <%= f.text_field :url, :autocomplete => "off" %>
-    <%= button_tag "Fetch Title", :id => "story_fetch_title",
-      :type => "button" %>
+      <%= f.url_field :url %>
+      <%= button_tag "Fetch Title", :id => "story_fetch_title",
+      :type => "button", :class => "btn btn-default"%>
+
+<!--
+    <%= f.label :url, "URL:", :class => "form-group" %>
+    <%= f.text_field :url, :autocomplete => "off", :class=>"form-control" %>
+  -->  
+    
   <% elsif !f.object.new_record? && !f.object.url.blank? %>
     <%= f.label :url, "URL:", :class => "required" %>
     <div class="d">
     <a href="<%= f.object.url %>"><%= f.object.url %></a>
     </div>
   <% end %>
-  </div>
 
-  <div class="boxline">
+
+
+  <%= f.text_field :title %>
+
+
+<!--
+  <div class="form-group">
     <%= f.label :title, "Title:", :class => "required" %>
-    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off"  %>
+    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off", :class=>"form-control"  %>
   </div>
+-->
 
-  <div class="boxline" style="margin-bottom: 2px;">
+<!--  <div class="form-group" style="margin-bottom: 2px;"> 
   <%= f.label :tags_a, "Tags:", :class => "required",
-    :style => "line-height: 2.3em;" %>
-  <%= f.select "tags_a", options_for_select(
-    Tag.all_with_filtered_counts_for(@user).map{|t|
-    [ "#{t.tag} - #{t.description}", t.tag, { "data-html" => raw("<strong>") +
-      t.tag + raw("</strong> - ") + t.description.to_s +
-      (t.filtered_count == 0 ? "" :
-      raw(" <em>") + "#{t.filtered_count} user" +
-      (t.filtered_count == 1 ? "" : "s") + " filtering" +
-      raw("</em>")) } ]}, f.object.tags_a), {}, { :multiple => true } %>
+    :style => "line-height: 2.3em;" %> -->
+  
+  <%= f.select :tags_a, 
+
+  options_for_select(Tag.all_with_filtered_counts_for(@user).map{|t|[ "#{t.tag} - #{t.description}", t.tag, 
+    { "data-html" => raw("<strong>") + t.tag + raw("</strong> - ") + t.description.to_s + (t.filtered_count == 0 ? "" : raw(" <em>") + "#{t.filtered_count} user" + (t.filtered_count == 1 ? "" : "s") + " filtering" + raw("</em>")) } ]}, f.object.tags_a), 
+
+    {}, { :multiple => true } %>
+
+  <% end %>
   </div>
 
   <div class="boxline">
     <%= f.label :description, "Text:", :class => "required" %>
-    <%= f.text_area :description, :rows => 15,
+    <%= f.text_area :description, 
+      :class => "form-control",
+      :rows => 15,
       :placeholder => "Optional when submitting a URL; please see guidelines",
       :autocomplete => "off" %>
   </div>
