--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -24,59 +24,53 @@
   <%= f.hidden_field :seen_previous %>
 <% end %>
 
-<%= bootstrap_form_for(@story) do |f| %> 
 
+<div class="row">
+  <div class="row">
   <% if f.object.url_is_editable_by_user?(@user) %>
-      <%= f.url_field :url %>
-      <%= button_tag "Fetch Title", :id => "story_fetch_title",
-      :type => "button", :class => "btn btn-default"%>
-
-<!--
-    <%= f.label :url, "URL:", :class => "form-group" %>
-    <%= f.text_field :url, :autocomplete => "off", :class=>"form-control" %>
-  -->  
-    
+    <%= f.label :url, "URL:", :class => "required" %>
+    <%= f.text_field :url, :autocomplete => "off" %>
+    <%= button_tag "Fetch Title", :id => "story_fetch_title",
+      :type => "button" %>
   <% elsif !f.object.new_record? && !f.object.url.blank? %>
     <%= f.label :url, "URL:", :class => "required" %>
     <div class="d">
     <a href="<%= f.object.url %>"><%= f.object.url %></a>
     </div>
   <% end %>
+  </div>
 
-
-
-  <%= f.text_field :title %>
-
-
-<!--
-  <div class="form-group">
+  <div class="row">
     <%= f.label :title, "Title:", :class => "required" %>
-    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off", :class=>"form-control"  %>
+    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off"  %>
   </div>
--->
 
-<!--  <div class="form-group" style="margin-bottom: 2px;"> 
+  <div class="row" style="margin-bottom: 2px;">
   <%= f.label :tags_a, "Tags:", :class => "required",
-    :style => "line-height: 2.3em;" %> -->
-  
-  <%= f.select :tags_a, 
-
-  options_for_select(Tag.all_with_filtered_counts_for(@user).map{|t|[ "#{t.tag} - #{t.description}", t.tag, 
-    { "data-html" => raw("<strong>") + t.tag + raw("</strong> - ") + t.description.to_s + (t.filtered_count == 0 ? "" : raw(" <em>") + "#{t.filtered_count} user" + (t.filtered_count == 1 ? "" : "s") + " filtering" + raw("</em>")) } ]}, f.object.tags_a), 
-
-    {}, { :multiple => true } %>
-
-  <% end %>
+    :style => "line-height: 2.3em;" %>
+  <%= f.select "tags_a", options_for_select(
+    Tag.all_with_filtered_counts_for(@user).map{|t|
+      html = "<strong>#{h(t.tag)}</strong> - #{h(t.description.to_s)}"
+      if t.hotness_mod != 0
+        html << " (hotness mod #{t.hotness_mod > 0 ? "+" : ""}#{t.hotness_mod})"
+      end
+      if t.filtered_count > 0
+        html << " <em>#{t.filtered_count} user" <<
+          (t.filtered_count == 1 ? "" : "s") << " filtering</em>"
+      end
+      [ "#{t.tag} - #{t.description}", t.tag, { "data-html" => raw(html) } ]},
+    f.object.tags_a), {}, { :multiple => true } %>
   </div>
 
-  <div class="boxline">
+  <div class="row">
     <%= f.label :description, "Text:", :class => "required" %>
-    <%= f.text_area :description, 
-      :class => "form-control",
-      :rows => 15,
+    <%= f.text_area :description, :rows => 15,
       :placeholder => "Optional when submitting a URL; please see guidelines",
       :autocomplete => "off" %>
   </div>
+
+
+
 
   <div class="boxline markdown_help_toggler">
     <a href="#" id="story_guidelines_toggler">
