--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -7,9 +7,11 @@
     <%= form_for @story do |f| %>
       <%= render :partial => "stories/form", :locals => { :story => @story,
         :f => f } %>
+  </div>
+<%= submit_tag "Submit", :class => "btn btn-default" %>
+  
 
-      <p></p>
-
+<!--
       <div class="box">
         <div class="boxline markdown_help_toggler">
           <div class="markdown_help_label">
@@ -36,7 +38,7 @@
     <%= render :template => "stories/show" %>
   <% end %>
 </div>
-
+-->
 <script>
   $(document).ready(function() {
     <% if @story.previewing %>
