--- a/app/assets/stylesheets/select2.css
+++ b/app/assets/stylesheets/select2.css
@@ -25,6 +25,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
   -webkit-box-sizing: border-box; /* webkit */
   -khtml-box-sizing: border-box;  /* konqueror */
   box-sizing: border-box;         /* css3 */
+  width: 100%;
 }
 
 .select2-container .select2-choice {
@@ -123,7 +124,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     top: 0;
     display: block;
     height: 100%;
-    width: 18px;
+    width: 100%;
 }
 
 .select2-container .select2-choice div b {
@@ -355,7 +356,7 @@ disabled look for already selected choices in the results dropdown
   background: transparent !important;
   font-family: sans-serif;
   font-size: 100%;
-  height: 15px;
+  height: 100%;
   padding: 5px;
   margin: 1px 0;
   outline: 0;
