--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -25,31 +25,63 @@
 <% end %>
 
 
-<div class="row">
-  <div class="row">
+<div class="form">
+  <div class="from-group">
+
   <% if f.object.url_is_editable_by_user?(@user) %>
+  
+  <div class= "row">
+  <div class= "col-md-9">
     <%= f.label :url, "URL:", :class => "required" %>
-    <%= f.text_field :url, :autocomplete => "off" %>
+    <%= f.text_field :url, :autocomplete => "off", :class => "form-control", :placeholder => "Paste URL here" %>
+    </div>
+  </div>
+
+    <div class= "row">
+      <div class= "col-md-9">
+    <%= f.label :title, "Title:", :class => "required" %>
+    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off", :class => "form-control", :placeholder => "Enter Title here or click 'Fetch Title'"  %>
+      </div>
+    <div class= 'col-md-1'>
     <%= button_tag "Fetch Title", :id => "story_fetch_title",
-      :type => "button" %>
+      :type => "button", :class => "btn btn-default fetch" %>
+    </div>
+  </div>
+  
   <% elsif !f.object.new_record? && !f.object.url.blank? %>
     <%= f.label :url, "URL:", :class => "required" %>
     <div class="d">
     <a href="<%= f.object.url %>"><%= f.object.url %></a>
+
+    <div class= "row">
+      <div class= "col-md-9">
+        <%= f.label :title, "Title:", :class => "required" %>
+         <%= f.text_field :title, :maxlength => 100, :autocomplete => "off", :class => "form-control", :placeholder => "Enter Title here or click 'Fetch Title'"  %>
+      </div>
+     <div class= 'col-md-1'>
+        <%= button_tag "Fetch Title", :id => "story_fetch_title",:type => "button", :class => "btn btn-default fetch" %>
+      </div>
     </div>
   <% end %>
-  </div>
 
-  <div class="row">
-    <%= f.label :title, "Title:", :class => "required" %>
-    <%= f.text_field :title, :maxlength => 100, :autocomplete => "off"  %>
+<div class="row">
+<div class= "col-md-9">
+    <%= f.label :description, "Text:", :class => "required" %>
+    <%= f.text_area :description, :rows => 8,
+      :placeholder => "Optional when submitting a URL; please see guidelines",
+      :autocomplete => "off", :class => "form-control" %>
   </div>
+</div>
 
-  <div class="row" style="margin-bottom: 2px;">
+<div class="row">
+<div class= "col-md-9">
   <%= f.label :tags_a, "Tags:", :class => "required",
     :style => "line-height: 2.3em;" %>
+  
   <%= f.select "tags_a", options_for_select(
+
     Tag.all_with_filtered_counts_for(@user).map{|t|
+      
       html = "<strong>#{h(t.tag)}</strong> - #{h(t.description.to_s)}"
       if t.hotness_mod != 0
         html << " (hotness mod #{t.hotness_mod > 0 ? "+" : ""}#{t.hotness_mod})"
@@ -61,17 +93,8 @@
       [ "#{t.tag} - #{t.description}", t.tag, { "data-html" => raw(html) } ]},
     f.object.tags_a), {}, { :multiple => true } %>
   </div>
-
-  <div class="row">
-    <%= f.label :description, "Text:", :class => "required" %>
-    <%= f.text_area :description, :rows => 15,
-      :placeholder => "Optional when submitting a URL; please see guidelines",
-      :autocomplete => "off" %>
-  </div>
-
-
-
-
+</div>
+<!--
   <div class="boxline markdown_help_toggler">
     <a href="#" id="story_guidelines_toggler">
       Story submission guidelines
@@ -121,6 +144,7 @@
 
       </ul>
     </div>
+-->
   </div>
 </div>
 
