--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -65,10 +65,17 @@ a {
   color: #000000;
   text-decoration: none;
 }
+
 a:hover,
 a:focus {
   color: #9CDA94;
-;
+}
+
+ .border {
+  border-bottom-color: #dddddd;
+  border-bottom-width: 1px;
+  border-bottom-style: inset;
+}
 
 
 }
