--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -53,8 +53,12 @@ margin-top: 20px;
 
 .col-xs-1 {
 /* width: 8.33333333%; */
+margin-bottom: 8px;
 }
 
+.btn-default{
+  padding:10px 10px;
+}
 .col-xs-9 {
   padding-right: 10px;
   padding-left: 0px;
@@ -71,10 +75,27 @@ a:focus {
   color: #9CDA94;
 }
 
+.trade {
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+}
+
+h5 {
+  margin-top: 0px;
+}
+
+h6 {
+  margin-top: 15px;
+  margin-bottom: 6px;
+}
+
  .border {
   border-bottom-color: #dddddd;
   border-bottom-width: 1px;
   border-bottom-style: inset;
+  margin-top: -10px;
+  margin-bottom: 0px;
 }
 
 
