--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <% if @cur_url == "/recent" %>
-  <div class="box" id="leader">
-    <em>The <a href="/newest">newest</a> stories with a random sampling of
-    recently submitted stories that have not yet reached the front page.</em>
+  <div class="container" id="leader">
+    <h5>The <a href="/newest">newest</a> stories with a random sampling of
+    recently submitted stories that have not yet reached the front page.</h5><br>
   </div>
 <% end %>
 
