--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -1,8 +1,23 @@
+/* Company Colours */ 
+$darkgrey='#252626'
+$sitegreen='#5e938b'
+$backgroundgrey='e0e1e2'
+$textgrey='343434'
+
+body{
+  font-family: MuseoSans,serif;
+}
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
   padding-left: 0px;
   padding-right: 0px;
+}
+
+.overall{
+  padding-top: 8px;
+  background-color: white;
 }
 
 .uvote {
@@ -22,32 +37,45 @@
 }
 
 .up {
-  background-color: #F8F8F8;
+  background-color: #ffffff;
 }
 
 .up:hover {
-  background: #74ce99;
+  background: #d3d4d5;
   text-decoration: none;
+    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
+    transition:width .25s, height .25s, background-color .25s, transform .25s;
 }
 
 .down:hover {
-  background: #c0552d;
+  background: #d3d4d5;
   text-decoration: none;
+    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
+    transition:width .25s, height .25s, background-color .25s, transform .25s;
 }
 
 .down {
-  background-color: #F8F8F8;
+  background-color: #ffffff;
 }
 
+.tagbutton:hover{
+  background:#464646;
+  color: white;
+}
 .tagbutton {
-  font-size: 10px;
+  font-size: 12px;
   line-height: 0;
-  background-color: #cccccc;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 6px;
   padding-left: 6px;
   margin-right: 2px;
+  background-color:#d4d5d6;
+  color: #313131;
+  border-radius: 2px;
+    -webkit-transition:width .25s, height .25s, background-color .25s, -webkit-transform .25s;
+    transition:width .25s, height .25s, background-color .25s, transform .25s;
+
 }
 
 .domain {
@@ -90,10 +118,7 @@ margin-bottom: 8px;
   padding-top: 5px;
 }
 
-a {
-  color: #000000;
-  text-decoration: none;
-}
+
 
 /*
 a:hover,
@@ -107,9 +132,22 @@ a:focus {
   padding-top: 0px;
 }
 
-h5 {
+
+#title:hover {
+  color: #67b15e;
+}
+#title {
+  color: #343434;
+}
+
+body{
+  background-color: #e1e2e3;
+}
+
+h4 {
   margin-top: 0px;
-  margin-bottom: 5px  ;
+  margin-bottom: 5px;
+  font: black;
 }
 
 h6 {
@@ -118,14 +156,16 @@ h6 {
 }
 
  .border {
-  border-bottom-color: #dddddd;
+  border-bottom-color: #d2d5d4;
   border-bottom-width: 1px;
   border-bottom-style: inset;
   margin-top: -10px;
   margin-bottom: 0px;
 }
 
+.byline{
 
+}
 
 .arrow-up {
   width: 0; 
@@ -133,7 +173,7 @@ h6 {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   
-  border-bottom: 6px solid #515151;
+  border-bottom: 6px solid #67b15e;
 }
 
 .arrow-down {
@@ -142,7 +182,7 @@ h6 {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   
-  border-top: 6px solid #515151;
+  border-top: 6px solid #c0552d;
 }
 
 
