--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -118,7 +118,13 @@ margin-bottom: 8px;
   padding-top: 5px;
 }
 
+#username:hover{
+  color: #67be15;
+}
 
+#username {
+  color: #777777;
+}
 
 /*
 a:hover,
