--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -21,7 +21,7 @@ class=" table-striped story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vo
       <% end %>
     </div>
   
-    <div class="col-md-6 col-lg-6 col-xs-10 trade">
+    <div class="col-md-6 col-lg-8 col-xs-10 trade">
       <h4>
       <% if story.can_be_seen_by_user?(@user) %>
         <a id="title" href="<%= story.url_or_comments_url %>"><%= story.title %></a>
@@ -36,8 +36,8 @@ class=" table-striped story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vo
         by <a><%= story.user.username %></a>
         just now
       <% else %>
-        by <a href="/u/<%= story.user.username %>"><%= story.user.username
-          %></a> <%= raw(time_ago_in_words_label(story.created_at).
+        by <strong><a id="username" href ="/u/<%= story.user.username %>"><%= story.user.username
+          %></a> </strong><%= raw(time_ago_in_words_label(story.created_at).
           gsub(/^about /, "")) %> ago
 
         <% if story.is_editable_by_user?(@user) %>
@@ -77,16 +77,20 @@ class=" table-striped story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vo
             (hidden by <%= pluralize(story.hider_count, "user") %>)
           <% end %>
         <% end %>
-        
+        <div class="row comments_label">
         <% if !story.is_gone? && (@user || story.comments_count > 0) %>
         
           <!--- feeds to story line 190-->
-          <div class="row comments_label">
+          
+
             <a href="<%= story.comments_url %>"><%= story.comments_count == 0 ?
               "Start the dicussion" : "#{story.comments_count} comment" <<
               (story.comments_count == 1 ? "" : "s") %></a>
-          </div>
+          <%else%>
+          <a href= "/login">Login to start discussion</a>
         <% end %>
+          </div>
+        
 
         <% if defined?(single_story) && single_story %>
           <% if story.downvotes > 0 %>
